[tool.poetry]
name = "chainlit-sample"
version = "0.1.0"
description = ""
authors = ["Tadahiro Ishisaka <tishisaka@baleen.studio>"]
readme = "README.md"
packages = [{include = "chainlit_sample", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.400"
langchain = "^0.2.11"
langchain-core = "^0.2.26"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.20"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.5.5"
ruff-lsp = "^0.0.54"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
